Adicionando GitHub Titulo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Projeto GitHub</title>
   </head>
   <body>
-    <h1>Fabricio Silva</h1>
+    <h1>Fabricio Silva - GitHub</h1>
   </body>
 </html>
